Resolves: tdf#162113 prefer restoring explicit font style selection

so when scrolling through fonts that might not have the original or
explicitly picked style, then on moving to the next font that does have
that style, then the original bold/italic/etc gets picked again.

Change-Id: If818a116ed4ab248cb67f60845acad2cd4eeb8ed
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173071
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 22cb250074606a9e637787245f8e18a11ac5c252)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173087
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>